# hollywood

./: .env.example  .gitattributes  .gitignore  CITATION.cff  DATASET_LICENSE  DETAILS.md  LICENSE  README.md  RELEASE_MANIFEST.json  constraints.txt  pyproject.toml  requirements-mscn.txt  requirements-zeroshot.txt  requirements.txt
data/: README.md  checksums.sha256  export_manifest.json  genre_derivation_summary.json  hollywood_200k.duckdb  source_export_coverage.csv
docs/: api_setup.md  artifacts.md  evaluation.md  generation.md  licensing.md  mscn.md  schema.md  zeroshot.md
experiments/: README.md
generator/: CONTINUATION.md  README.md  assembly.py  benchmark_candidate_profile.json  big_history_events.py  bootstrap_artifacts.py  build_duckdb_from_imdb_schema.py  calibrate_llm_prompts.py  character_identity_bank.json  check_local_llm.py  company_lexicon.json  complete_post100_baseline.py  concept_packs.json  continuation.py  continuation_entities.py  continuation_lifecycle.py  contracts.py  enrich_persons_api.py  entities_to_csv.py  export_imdb_schema.py  feather_sink.py  financials.py  franchise_bibles.json  generate_bootstrap_artifacts_api.py  generate_character_bank.py  generate_companies_procedural.py  generate_company_financial_profiles.py  generate_concept_packs_api.py  generate_edges_hybrid.py  generate_franchise_bibles_api.py  generate_keyword_genres.py  generate_keyword_motif_bank_api.py  generate_keywords_procedural.py  generate_latent_vars_api.py  generate_movies.py  generate_persons_procedural.py  generate_plot_summaries_api.py  (+59 more)
queries/: README.md
(+268 files in other folders)
