[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hollywood-benchmark"
version = "0.1.0"
description = "Synthetic IMDb-compatible benchmark for cardinality and cost estimation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools]
packages = []
